add atributos e valid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update 
+spring.datasource.url=jdbc:postgresql://${MYSQL_HOST:localhost}:3306/table-jobs
+spring.datasource.username=adm 
+spring.datasource.password=adm
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+ #spring.jpa.show-sql: true
